@@ -2,18 +2,16 @@ package com.baridmedia.assuranceapi.controller;
 
 import com.baridmedia.assuranceapi.domain.Devis;
 import com.baridmedia.assuranceapi.domain.QuoteStatus;
-import com.baridmedia.assuranceapi.dto.CreateQuoteRequest;
+import com.baridmedia.assuranceapi.dto.QuoteRequestDto;
 import com.baridmedia.assuranceapi.dto.QuoteDto;
 import com.baridmedia.assuranceapi.service.QuoteService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.util.UriComponentsBuilder;
 
-import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/quotes")
@@ -23,17 +21,21 @@ public class QuoteController {
     private final QuoteService quoteService;
 
     @PostMapping
-    public ResponseEntity<QuoteDto> createQuote(@Valid @RequestBody CreateQuoteRequest req, UriComponentsBuilder uriBuilder) {
+    public ResponseEntity<QuoteDto> createQuote(@Valid @RequestBody QuoteRequestDto req) {
         Devis saved = quoteService.createQuote(req.clientId(), req.produitId(), req.montant());
-        QuoteDto dto = map(saved);
-        URI location = uriBuilder.path("/api/quotes/{id}").buildAndExpand(saved.getId()).toUri();
-        return ResponseEntity.created(location).body(dto);
+        QuoteDto quoteDto = map(saved);
+        return ResponseEntity.status(HttpStatus.CREATED).body(quoteDto);
     }
 
     @GetMapping
-    public List<QuoteDto> listQuotes(@RequestParam(required = false) QuoteStatus status) {
-        return quoteService.listByStatus(status).stream().map(this::map).collect(Collectors.toList());
+    public ResponseEntity<List<QuoteDto>> listQuotes(@RequestParam(required = false) QuoteStatus status) {
+        List<Devis> devisList = quoteService.listByStatus(status);
+        List<QuoteDto> result = devisList.stream()
+                .map(this::map)
+                .toList();
+        return ResponseEntity.ok(result);
     }
+
 
     @PostMapping("/{id}/approve")
     public QuoteDto approve(@PathVariable Long id) {
